--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 </div>
 <!-- jumbotron -->
 
+<hr class="my-4">
 <!-- collapse programming-lang -->
        <h1 class="text-center" style="color: #f3f4f5;" >Programming languages<span class="badge badge-secondary">.🤍.</span></h1>
        <div class="accordion" id="accordionExample">
@@ -175,7 +176,7 @@
         </div>
       </div>
 <!-- collapse programming-lang -->
-
+<hr class="my-4">
 <!--Try Python -->
 <h1 class="text-center" style="color: #f3f4f5;">Python is very important and easy</h1>
 <div class="card bg-dark">
@@ -197,7 +198,7 @@
 </div>
 <br>
 <!--Try Python -->
-
+<hr class="my-4">
 <!-- Try HTML -->
 <h1 class="text-center" style="color: #f3f4f5;">HTML is very important for site building </h1>
 <div class="card bg-dark">
@@ -223,10 +224,11 @@
 
 <!-- Try HTML -->
 
+<hr class="my-4">
 <!-- CSS -->
 <h1 class="text-center" style="color: #f3f4f5;">Languages :</h1>
 <div class="container-fluid">
-  <div class="row">
+  <div class="row justify-content-center" style="background-color: #343a40ee; border-radius: 7px; padding:20px ;">
     <div class="card bg-dark text-center" style="width: 18rem; margin-right: 15px;">
       <img src="css.jpg" class="card-img-top" alt="...">
       <div class="card-body bg-dark text-light">
@@ -237,8 +239,8 @@
     
 
 </div>
-
-<!-- CSS -->
+<hr class="my-4">
+<!-- HTML -->
     <div class="card bg-dark text-center" style="width: 18rem;">
       <img src="HTML.png" class="card-img-top" alt="...">
       <div class="card-body bg-dark text-light">
@@ -251,14 +253,8 @@
 </div>
 
 
-</div>
-</div>
+
 <!-- HTML -->
-
-
-
-
-
 
 
 <!-- script for copy button -->
@@ -272,9 +268,83 @@
     window.getSelection().removeAllRanges();
   }
 </script>
-
-
 <!-- script for copy button -->
+
+<hr class="my-4">
+<!-- thanks -->
+
+<h1 class="text-center text-light">Thanks For :</h1>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="card" style="width: 18rem; margin:10px ;">
+      <img src="melsawah.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Mr. Mohammed El Sawah</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem; margin:10px ;">
+      <img src="Mousa1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Eng. Mousa El Sawah</p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+
+<!-- thanks -->
+
+<hr class="my-4">
+<!-- contact us -->
+<h1 class="text-light" style="text-align: center;">Contact Us :</h1>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+
+      <div class="card bg-dark" style="width: 18rem; margin: 10px;">
+      <div class="card-body">
+      <h5 class="card-title text-light">
+        Facebook
+        <img src="facebook.png" class="myicon">
+      </h5>
+      <h6 class="card-subtitle mb-2 text-muted"></h6>
+      <p class="card-text"></p>
+      <a href="https://www.facebook.com/mousa.mohamed.585/" target="_blank" class="card-link">Go to link</a>
+    </div>
+  </div>
+  <div class="card bg-dark" style="width: 18rem; margin: 10px;">
+    <div class="card-body">
+    <h5 class="card-title text-light">
+      Instagram
+      <img src="instagram.png" class="myicon">
+    </h5>
+    <h6 class="card-subtitle mb-2 text-muted"></h6>
+    <p class="card-text"></p>
+    <a href="https://www.instagram.com/m0usaa/" target="_blank" class="card-link">Go to the link</a>
+  </div>
+  </div>
+  <div class="card bg-dark" style="width: 18rem; margin: 10px;">
+    <div class="card-body">
+    <h5 class="card-title text-light">
+      Twitter
+      <img src="twitter.png" class="myicon">
+    </h5>
+    <h6 class="card-subtitle mb-2 text-muted"></h6>
+    <p class="card-text"></p>
+    <a href="https://twitter.com/m0usaa_" target="_blank" class="card-link">Go to the link</a>
+  </div>
+
+
+</div>
+<!-- contact us -->
+
+<!-- <script>
+    alert("By Eng. Mousa El Sawah and Mr. Mohammed El Sawah")
+</script> -->
+
+
+
 </body>
        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
